<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="signup">회원가입</string>
    <string name="login">로그인</string>
    <string name="next">다음</string>
    <string name="starting">시작하기</string>
    <string name="loading">로딩중</string>

    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="confirm">확인</string>기
    <string name="do_auth">인증하기</string>
    <string name="yes">네, 좋아요!</string>
    <string name="later">나중에 하기</string>

    <string name="message_login_issue"><u>계정에 문제가 있나요?</u></string>

    <string name="message_invalidate_phone">유효하지 않은 핸드폰 번호입니다</string>
    <string name="message_invalidate_signup_process">가입 프로세스가 유효하지 않습니다</string>
    <string name="message_customer_service">고객 센터에 문의 해주세요</string>

    <string name="phone_auth">핸드폰 번호 인증</string>
    <string name="hint_phone_input">01012345678</string>
    <string name="message_phone_auth">핸드폰 번호 입력 시, 인증 코드를 문자 메세지로 발송합니다. 핸드폰 번호는 다른 사람들에게 공유되거나 프로필에 표시하지않습니다.</string>
    <string name="message_phone_input_error">핸드폰 번호를 다시 확인해 주세요</string>
    <string name="message_send_auth_fail">인증 코드 전송 실패</string>
    <string name="message_check_signup_state_fail">회원가입 이력 조회 실패</string>
    <string name="message_phone_auth_complete">핸드폰 번호 인증 완료</string>

    <string name="title_verify">인증 코드 입력</string>
    <string name="message_verify">%1s 으로\n전송된 코드를 입력해주세요</string>
    <string name="message_verify_error">인증 코드를 다시 확인 해 주세요</string>
    <string name="message_resend_auth"><u>인증 코드 다시 받기</u></string>
    <string name="message_auth_timeout">인증 코드 유효시간이 만료되었습니다\n인증 번호를 재발송 합니다</string>
    <string name="message_resend_auth_success">인증번호가 재전송 되었습니다</string>

    <string name="email_input_title">이메일 입력</string>
    <string name="hint_email_input">user@falling.com</string>
    <string name="message_email_input">이메일 계정 인증으로 로그인 문제가 생길 시 이메일로 계정 복구를 진행합니다. 따로 프로필에 표시 되지 않습니다.</string>
    <string name="message_email_input_error">올바른 이메일 주소를 입력해주세요</string>
    <string name="message_email_patch_fail">이메일 입력을 실패하였습니다</string>

    <string name="title_nickname">닉네임을 알려주세요.</string>
    <string name="hint_nickname">닉네임</string>
    <string name="message_nickname_input">폴링에서 활동할 자유로운 호칭을 설정해주세요</string>
    <string name="value_input_length">(%1d/%2d)</string>
    <string name="message_nickname_patch_fail">닉네임 입력을 실패하였습니다</string>
    <string name="message_nickname_duplicate">이미 사용중인 닉네임입니다</string>
    <string name="message_nickname_duplicate_check_loading">중복검사 중입니다</string>
    <string name="message_nickname_duplicate_check_fail">중복검사를 실패하였습니다</string>

    <string name="title_all_agreement">전체 동의</string>
    <string name="parenthesis_require">(필수)</string>
    <string name="parenthesis_select">(선택)</string>
    <string name="title_terms">폴링을 이용하려면 동의가 필요해요.</string>
    <string name="message_terms_notify">Falling은 만 18세 이상부터 이용 가능하며, 타인의 계정으로 본 서비스를 사용하는 경우 정보통신망 이용 촉진 및 정보보호 등에 관한 법률에 의거 처벌을 받을 수 있습니다.</string>
    <string name="message_terms_fetch_error">이용약관 데이터를 불러올 수 없습니다</string>
    <string name="message_terms_patch_error">이용약관 데이터를 입력할 수 없습니다</string>
    <string name="message_require_terms_need_select">필수 이용 약관을 동의해주세요</string>

    <string name="title_preferred_gender">선호 성별을 알려주세요</string>
    <string name="message_preferred_gender_patch_fail">선호 성별 입력을 실패했습니다</string>

    <string name="text_male">남성</string>
    <string name="text_female">여성</string>
    <string name="text_all">모두</string>

    <string name="title_ideal_type">이상형을 알려주세요</string>
    <string name="message_ideal_type">내 이상형 %1d개를 선택해주세요</string>
    <string name="message_ideal_fetch_fail">이상형 목록을 불러올 수 없습니다</string>
    <string name="message_ideal_patch_fail">이상형 입력을 실패하였습니다</string>

    <string name="title_interest">관심사를 알려주세요</string>
    <string name="message_interest">내 관심사 %1d개를 선택해주세요</string>
    <string name="message_interest_fetch_fail">관심사 목록을 불러올 수 없습니다</string>
    <string name="message_interest_patch_fail">관심사 입력을 실패하였습니다</string>

    <string name="title_profile_image">사진을 추가해주세요.</string>
    <string name="message_profile_image_input">얼굴 사진이 잘 나온 사진 2장을 필수로 넣어주세요</string>

    <string name="message_profile_image_partial_upload_fail">%1d장 업로드 실패</string>
    <string name="message_profile_image_upload_fail">프로필 이미지 업로드를 실패하였습니다</string>
    <string name="message_profile_image_patch_fail">프로필 이미지 입력을 실패하였습니다</string>

    <string name="menu_profile_image_modify">사진 변경</string>
    <string name="menu_profile_image_remove">사진 삭제</string>

    <string name="title_height">키를 입력해주세요.</string>
    <string name="message_height_path_fail">키 정보 입력을 실패하였습니다</string>
    <string name="message_require_select_height">키를 선택해주세요</string>

    <string name="title_introduce">나를 알려 주세요.</string>
    <string name="hint_introduce">제 MBTI는요 :)</string>
    <string name="message_introduce_input">자유롭게 자기소개를 해주세요.</string>

    <string name="title_birthday">성별, 생일을 알려주세요.</string>
    <string name="message_birthday_patch_fail">생일, 성별 입력을 실패하였습니다.</string>
    <string name="message_invalidate_date">올바른 날짜를 입력해주세요.</string>

    <string name="message_can_change_in_my_page">마이페이지에서 변경 가능합니다</string>
    <string name="date_default">2004. 01. 01</string>

    <string name="title_more_info">추가정보를 알려주세요</string>
    <string name="title_smoke_info">흡연 스타일을 선택해주세요</string>
    <string name="title_drink_info">주량을 선택해주세요</string>
    <string name="message_more_info_patch_fail">추가정보 입력을 실패하였습니다</string>
    <string name="message_require_select_more_info">추가정보를 선택해주세요</string>

    <string name="title_religion">종교를 알려주세요</string>
    <string name="message_religion_patch_fail">종교 입력을 실패하였습니다</string>
    <string name="message_require_select_religion">종교를 선택해주세요</string>

    <string name="religion_none">무교</string>
    <string name="religion_christianity">기독교</string>
    <string name="religion_buddhism">불교</string>
    <string name="religion_catholic">천주교</string>
    <string name="religion_won_buddhism">원불교</string>
    <string name="religion_extra">기타</string>

    <string name="title_more_info_btn_none">안 함</string>
    <string name="title_more_info_btn_sometime">가끔</string>
    <string name="title_more_info_btn_almost">자주</string>

    <string name="title_location">현재 위치를 알려주세요.</string>
    <string name="hint_location">서울시 강남구 대치동</string>
    <string name="message_caption_location">내 주변의 친구들과 더 많은 대화를 나눌 수 있어요.</string>
    <string name="message_location_auto_fetch_fail">위치를 자동으로 불러올 수 없습니다.</string>
    <string name="message_location_fetch_fail">위치를 불러올 수 없습니다.</string>
    <string name="message_region_code_fetch_fail">지역구 코드를 불러오지 못 했습니다.</string>
    <string name="message_location_patch_fail">위치 입력을 실패하였습니다</string>
    <string name="message_invalidate_location">위치정보가 유효하지 않습니다</string>


    <string name="message_signup_fail">회원가입에 실패하였습니다</string>
    <string name="title_inquiry">무엇이든 물어보세요!</string>
    <string name="caption_inquiry_email">답변받을 이메일 주소</string>
    <string name="title_inquiry_tool_bar">문의하기</string>
    <string name="hint_inquiry_email">답변받을 이메일 주소를 입력해주세요.</string>
    <string name="hint_inquiry_content">내용을 적어주세요.</string>
    <string name="caption_inquiry_content">내용 입력</string>
    <string name="message_email_agreement">이메일 정보 제공 동의</string>
    <string name="message_email_agreement_detail">보내주신 질문에 답변드리기 위해 이메일 정보 제공에 동의해 주시기 바랍니다.</string>
    <string name="message_email_send_fail">이메일 전송에 실패하였습니다.</string>

    <string name="title_complete_dialog">문의하기 완료</string>
    <string name="message_complete_content">답변에는 하루 정도의 시간이 걸릴 수 있어요.\n답변이 안온다면, 스팸 메일함을 확인해주세요.</string>
    <string name="message_complete_back"><u>돌아가기</u></string>
    <string name="inquiry_complete_dialog">InquiryCompleteDialog</string>

    <string name="signup_user_invalidate">회원가입 정보가 존재하지 않습니다</string>

    <string name="block_contacts">아는 사람 만나지 않기</string>
    <string name="title_block_contacts">혹시 폴링에서\n아는 사람을 만날까봐\n걱정되시나요?</string>
    <string name="description_block_contacts">폴링에서 아는 사람을 마주치고 싶지 않다면\n해당 기능을 켜주세요.</string>

</resources>
