<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".email.EmailActivity"
    android:background="@color/black_161616"
    android:id="@+id/layout_background"
    android:fitsSystemWindows="true"
    >

    <include
        android:id="@+id/item_signup_tool_bar"
        layout="@layout/item_signup_tool_bar" />

    <TextView
        style="@style/H1BoldTextStyle"
        android:layout_marginTop="76dp"
        android:id="@+id/tv_email_title"
        android:text="@string/email_input_title"
        android:textColor="@color/white_f9fafa"
        android:layout_marginHorizontal="38dp"
        app:layout_constraintTop_toBottomOf="@id/item_signup_tool_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_et_email"
        app:layout_constraintTop_toBottomOf="@id/tv_email_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="@dimen/AuthTextInputEditLayoutHorizontalMargin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/EmailTextInputLayoutStyle"
        android:theme="@style/EmailTextInputLayoutStyle"
        >
        <AutoCompleteTextView
            android:completionThreshold="1"
            style="@style/PhoneAuthInputEditTextFontStyle"
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginBottom="@dimen/TextInputEditTextBottomMinusMargin"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_marginTop="1dp"
        android:layout_marginStart="38dp"
        android:id="@+id/iv_error"
        app:layout_constraintTop_toBottomOf="@id/layout_et_email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_error"
        />

    <TextView
        style="@style/Caption1MediumGrayTextStyle"
        android:textColor="@color/gray_666666"
        android:id="@+id/tv_email_auth_message"
        android:text="@string/message_email_input"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="38dp"
        app:layout_constraintTop_toTopOf="@id/iv_error"
        app:layout_constraintStart_toEndOf="@id/iv_error"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/SignupTextButtonStyle"
        android:id="@+id/btn_auth"
        android:enabled="false"
        android:layout_marginTop="44dp"
        android:layout_marginHorizontal="38dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/layout_et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        android:text="@string/next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        />

    <ProgressBar
        style="@style/THT_ProgressStyle"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
